--- a/index.html
+++ b/index.html
@@ -9,15 +9,94 @@
 
     <style src="styles/styles.css"></style>
 </head>
-<body>
-    <section class="home">
+<body class="font-poppins ">
+    <main class="min-h-screen bg-[black] bg-[url(images/background.png)] bg-no-repeat bg-center">
+        <!-- Home Screen -->
+        <section id="home-screen" class=" min-h-screen text-white flex flex-col items-center justify-center">
+            <div class="flex flex-col items-center justify-center gap-10">
+                <h1 class="text-8xl font-bold font-anton uppercase">Alpha Clash Pro</h1>
+                <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button onclick="play()" class="btn bg-white text-black">Play</button>
+            </div>
+        </section>
 
-    </section>
-    <section class="play-graound">
+        <!-- Play Ground -->
+        <section id="play-ground" class=" hidden">
+            <div class="flex flex-col items-center gap-20 justify-center my-auto">
+                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
+                    <div class="flex justify-center text-white ">
+                        <p class="rounded-b-xl bg-[#2F2941] pb-3 px-8 ">Don't watch keyboard  while playing...</p>
+                    </div>
+                    <div class="flex items-center justify-center h-full">
+                        <p id="current-alphabet" class="text-9xl font-bold uppercase">Y</p>
+                    </div>
+                </div>
 
-    </section>
-    <section>
-        
-    </section>
+                <div>
+                    <div class="my-1 flex w-full justify-center gap-1">
+                    <kbd id="q" class="kbd">q</kbd>
+                    <kbd id="w" class="kbd">w</kbd>
+                    <kbd id="e" class="kbd">e</kbd>
+                    <kbd id="r" class="kbd">r</kbd>
+                    <kbd id="t" class="kbd">t</kbd>
+                    <kbd id="y" class="kbd">y</kbd>
+                    <kbd id="u" class="kbd">u</kbd>
+                    <kbd id="i" class="kbd">i</kbd>
+                    <kbd id="o" class="kbd">o</kbd>
+                    <kbd id="p" class="kbd">p</kbd>
+                    </div>
+                    <div class="my-1 flex w-full justify-center gap-1">
+                    <kbd id="a" class="kbd">a</kbd>
+                    <kbd id="s" class="kbd">s</kbd>
+                    <kbd id="d" class="kbd">d</kbd>
+                    <kbd id="f" class="kbd">f</kbd>
+                    <kbd id="g" class="kbd">g</kbd>
+                    <kbd id="h" class="kbd">h</kbd>
+                    <kbd id="j" class="kbd">j</kbd>
+                    <kbd id="k" class="kbd">k</kbd>
+                    <kbd id="l" class="kbd">l</kbd>
+                    </div>
+                    <div class="my-1 flex w-full justify-center gap-1">
+                    <kbd id="z" class="kbd">z</kbd>
+                    <kbd id="x" class="kbd">x</kbd>
+                    <kbd id="c" class="kbd">c</kbd>
+                    <kbd id="v" class="kbd">v</kbd>
+                    <kbd id="b" class="kbd">b</kbd>
+                    <kbd id="n" class="kbd">n</kbd>
+                    <kbd id="m" class="kbd">m</kbd>
+                    <kbd id="/" class="kbd">/</kbd>
+                    </div>
+                </div>
+
+                <div class="flex justify-between w-3/4">
+                    <button class="btn rounded-full bg-purple-800 text-white px-6 border-none">
+                        Life
+                        <img src="./images/heart.png" alt="">
+                        <span id="current-life">5</span>
+                    </button>
+                    <button class="btn rounded-full bg-blue-800 text-white px-6 border-none">
+                        Score
+                        <img src="./images/dolar.png" alt="">
+                        <span id="current-score">0</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Final Score -->
+        <section id="final-score" class=" hidden flex justify-center items-center min-h-screen">
+            <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg hidden">
+                <h1 class="text-8xl">
+                    <span class="font-extrabold">Score:</span>
+                    <span>14</span>
+                </h1>
+                <button onclick="play()" class="btn">Play Again</button>
+                <p>Practice will make you a Pro</p>
+            </div>
+        </section>
+    </main>
+
+    <script src="scripts/utility.js"></script>
+    <script src="scripts/alpha-clash.js"></script>
 </body>
 </html>
