game developed completed

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
         <!-- Final Score -->
         <section id="final-score" class=" hidden flex justify-center items-center min-h-screen">
-            <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg hidden">
+            <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg ">
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score:</span>
-                    <span>14</span>
+                    <span id="game-score">14</span>
                 </h1>
                 <button onclick="play()" class="btn">Play Again</button>
                 <p>Practice will make you a Pro</p>
